# lbplot-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: publish.yml
web/: Cargo.toml  Trunk.toml  index.html  tailwind.config.js
web/src/: chart.rs  data.rs  main.rs  theme_switch.rs  tickers.rs
